--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
           <li class="header__link">En</li>
         </ul>
       </header>
+
+      <main class="content">
+        <section aria-label="Путешествия" class="lead">
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">
+            Настоящая страна не в выпусках новостей, а здесь.
+          </p>
+          <div class="lead__wrap-img">
+            <img
+              src="./images/lead-polka.jpg"
+              alt="полка"
+              class="lead__image"
+            />
+            <p class="lead__caption">ваша полка — верхняя</p>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
