Сверстал блок photo-grid

--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
             </ul>
           </section>
         </div>
+        <section class="photo-grid">
+          <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="поезд">
+          <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="тучи">
+          <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="туман">
+          <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="сочи">
+          <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="арисва">
+          <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="байкал">
+          <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="эльбрус">
+          <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="кондратьев">
+          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="камчатка">
+          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="камчатка">
+          <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="байкал">
+          <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="ергаки">
+        </section>
       </main>
     </div>
   </body>
