--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </ul>
         </section>
       </div>
-      <section class="photo-grid">
+      <section class="photo-grid" aria-label="Фото">
         <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="поезд" />
         <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="тучи" />
         <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="туман" />
@@ -77,7 +77,7 @@
         <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="байкал" />
         <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="ергаки" />
       </section>
-      <section class="places">
+      <section class="places" aria-label="Места">
         <div class="place">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
@@ -106,8 +106,9 @@
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <span><a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National
-              Geographic</a></span>
+            <span><a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="place__link">National
+                Geographic</a></span>
           </div>
           <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image" />
           <div class="place__paragraf-wrapper">
@@ -131,7 +132,8 @@
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <span><a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a></span>
+            <span><a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                class="place__link">Facebook</a></span>
           </div>
           <img src="./images/place-altai.jpg" alt="Алтай" class="place__image" />
           <div class="place__paragraf-wrapper">
@@ -164,7 +166,7 @@
               красивейших мест в России.
             </p>
             <p class="place__paragraph">
-              Конечно, это всё так. Но Байкал ещё идеальное место для 
+              Конечно, это всё так. Но Байкал ещё идеальное место для
               соревнований по скийорингу. Это такой вид спорта, когда лыжник
               привязывает себя к мотоциклу, и тандем старается развить как можно
               бóльшую скорость на льду. В марте 2019 года на фестивале
@@ -193,6 +195,16 @@
             </p>
           </div>
         </div>
+      </section>
+      <section class="cover" aria-label="Обложка">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+          <h2 class="cover__title">
+            До Байкала <br>«на собаках»
+          </h2>
+          <p class="cover__subtitle">По мотивам учебной темы
+            о Транссибе — путешествие
+            от столицы до Байкала на электричках.</p>
+        </a>
       </section>
     </main>
   </div>
