--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
         </a>
       </section>
     </main>
+    <footer class="footer">
+      <nav class="footer__links">
+          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+      </nav>
+      <p class="footer__copiring">&copy; 2020. Впишите своё имя</p>
+  </footer>
   </div>
 </body>
 
