--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main class="content">
       <div class="wrap">
-        <section aria-label="Путешествия" aria-label="Путешествия" class="lead">
+        <section aria-label="Путешествия" class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
