--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <section class="cover" aria-label="Обложка">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
           <h2 class="cover__title">
-            До Байкала <br>«на собаках»
+            До Байкала «на собаках»
           </h2>
           <p class="cover__subtitle">По мотивам учебной темы
             о Транссибе — путешествие
