--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <header class="header">
         <div class="header__logo"></div>
         <ul class="header__links">
-          <li class="header__link-wrap"><a class="header__link header__link_active">Ru</a></li>
-          <li class="header__link-wrap"><a class="header__link">En</a></li>
+          <li class="header__link-wrap"><a href="#" class="header__link header__link_active">Ru</a></li>
+          <li class="header__link-wrap"><a href="#" class="header__link">En</a></li>
         </ul>
       </header>
 
